# Ray-Tracing-Simulation-in-Acoustics

./: .bazelrc  .clang-format  .github  .gitignore  .swp  .vscode  Analisis  ApplicationBuild  BUILD  BUILD.bazel  ReadMe.md  WORKSPACE  WORKSPACE.bazel  a.ply  bazel-bin  bazel-dCoeffReyTracer  bazel-out  bazel-testlogs  codecov.yml  constants.h  core  createCompileCommandsDatabase.py  githubContent  gui  localUtilities.h  main  node_modules  nodemon.json  obj  package-lock.json  package.json  polarPatterns.js  pythonToolsRequirements.txt  reference.cpp  requirements.txt  run.py  simulator.h  taks.notes  task.todo  test.py  (+6 more)
.github/workflows/: ci.yml  lint.yml
Analisis/: analisis.ipynb  inputInfo.txt  inputPressure.txt
Analisis/.ipynb_checkpoints/: analisis-checkpoint.ipynb
ApplicationBuild/: build.v1.0.cpp  build.v1.1.cpp  buildTest.cpp  collectorTest.cpp  debugTracking.cpp  validation.cpp  validationBothAxis.cpp  validationGeoDome.cpp  validationXAxis.cpp
core/: classUtlilities.cpp  classUtlilities.h  constants.h  exceptions.h  ray.cpp  ray.h  vec3.cpp  vec3.h
data/: energyCollectors.json  model.json  trackingData.json
gui/: addObjects.js  animate.js  data.json  energyCollectors.json  hsl.js  index.html  index.js  makeInstance.js  normalizedResults.html  onWindowResize.js  polarPatterns.html  polarPatterns.js  preLoader.js  preLoaderCheckState.js  prepareScene.js  results.html  results.js  simulation.html  simulation.js  simulationStyle.css  validation.js  validations.html
gui/src/polarPatterns/: associateCollectorWithData.js  calculateDataForPolarPatterns.js  compareCollectorsWithEnergy.js  data.js  linSpaceArray.js
gui/src/results/: drawDCoefficient.js  getDCoefficient.js
gui/src/simulation/: EnergyCollector.js  addEnergyCollectors.js  addFrequencySlider.js  addModel.js  addObjects.js  addToggleSwitchOnModelVsReference.js  deleteModelFromSimulation.js  deleteTracking.js  drawTracking.js  getEnergyCollectors.js  getModel.js  getReference.js  makeCollector.js  makeTriangle.js  prepareScene.js  vec3.js
main/: SImulator.h  Simulator.cpp  model.cpp  model.h  positionTracker.cpp  positionTracker.h  rayTracer.cpp  rayTracer.h  resultsCalculation.cpp  resultsCalculation.h  sceneBuilder.cpp  sceneBuilder.h  sceneManager.cpp  sceneManager.h  simulator.cpp  simulator.h  trackers.cpp  trackers.h
pythonTools/: energyCollectorsTools.py
pythonTools/core/: 3Dview.py  energyCollectorsTools.py
pythonTools/data/: energyCollectors.txt  sectionsData.txt  triangles.txt
pythonTools/test/: collectorTools_test.py
server/: app.js
server/AppCards/: normalizedResults.html  preLoader.html  results.html  simulation.html  validations.html
server/css/: simulationStyle.css
server/data/: energyCollectors.js  loading.js  model.js  referenceData.js  results.js  trackingData.js
server/gui/: normalizedResults.js  polarPatterns.js  validation.js  validations.html
tests/: energyCollector_test.cpp  generator_test.cpp  generators_test.cpp  main_test.cpp  object_test.cpp  object_utils_test.cpp  phasePropagation_test.cpp  rayTracer_test.cpp  ray_test.cpp  readingObjFiles_test.cpp  resultsCalculation_test.cpp  sceneBuilder_test.cpp  sceneManager_test.cpp  simulator_test.cpp  sphere_test.cpp  test_timeTracking.cpp  trackers_test.cpp  triangleObj_test.cpp  vec3_test.cpp
tests/testData/: data.json
validationResults/: 1D_0.5m_modulo7_2000Hz_10n_60stopni_kwadratPlusJeden.json  1D_1m_modulo23_500Hz_46n_30stopni_5potega.json  1D_1m_modulo7_1000hz_12n_15stopni_kwadratModulo.json  1D_2m_modulo13_250Hz_9n_15stopni_5potega.json  1m_12n_100stopni.json  1m_12n_120stopni.js  1m_12n_140stopni.js  1m_12n_140stopni.json  1m_12n_160stopni.js  1m_12n_160stopni.json  1m_12n_180stopni.js  1m_12n_60stopni.js  1m_12n_80stopni.js  1m_12n_80stopni.json  1m_6n_100stopni.js  1m_6n_120stopni.js  1m_6n_140stopni.js  1m_6n_140stopni.json  1m_6n_160stopni.js  1m_6n_160stopni.json  1m_6n_180stopni.js  1m_6n_180stopni.json  1m_6n_60stopni.js  1m_6n_80stopni.js  2D_0.6m_modulo13_1000Hz_12n_30stopni.json  2D_1m_200Hz_modulo7_30stopni_6n.json  2D_1m_200Hz_modulo7_6n.json  2D_1m_modulo3_500Hz_60stopni_6n.json  2D_2m_6n_modulo7_200Hz_15stopni_5potega.json
validationResults/Reference/: 1m_12n_120stopni.js  1m_12n_140stopni.js  1m_12n_160stopni.js  1m_12n_180stopni.js  1m_12n_180stopni.json  1m_12n_60stopni.js  1m_12n_60stopni.json  1m_12n_80stopni.js  1m_6n_100stopni.js  1m_6n_100stopni.json  1m_6n_120stopni.js  1m_6n_120stopni.json  1m_6n_140stopni.js  1m_6n_160stopni.js  1m_6n_180stopni.js  1m_6n_60stopni.js  1m_6n_60stopni.json  1m_6n_80stopni.js  1m_6n_80stopni.json  2D_2m_6n_modulo7_200Hz_15stopni_5potega.json
validationResults/Reference/line/: 1D_1m_modulo23_500Hz_46n_30stopni_5potega.json  1D_2m_modulo13_250Hz_9n_15stopni_5potega.json  2D_1m_200Hz_modulo7_30stopni_6n.json  2D_2m_6n_modulo7_200Hz_15stopni_5potega.json
validationResults/Reference/surface/: 1D_1m_modulo23_500Hz_46n_30stopni_5potega.json  1D_2m_modulo13_250Hz_9n_15stopni_5potega.json  2D_1m_200Hz_modulo7_30stopni_6n.json  2D_2m_6n_modulo7_200Hz_15stopni_5potega.json
validationResults/rayTraced/line/: 1D_1m_modulo23_500Hz_46n_30stopni_5potega.json  1D_2m_modulo13_250Hz_9n_15stopni_5potega.json  2D_1m_200Hz_modulo7_30stopni_6n.json  2D_2m_6n_modulo7_200Hz_15stopni_5potega.json
validationTools/: calculateHowHighWereNodePositioned.py  calculateNormalizedDiffusionCoefficient.py  caluclateReferenceFromMes.py  clearDatabase.py  compareResultsToReference.py  compareResutlsToReference.py  connect.py  drawCharacteristics.py  drawValidation.py  ipConfig.py  logValidation.py  loggingSimulationProperties.py  loggingStatistics.py  prepareAnaliticalResultsForValidation.py
validationTools/MESresults/: 1D_1m_modulo23_500Hz_46n_30stopni_5potega_out_linia.csv  1D_1m_modulo23_500Hz_46n_30stopni_5potega_out_powierzchnia.csv  1D_2m_modulo13_250Hz_9n_15stopni_5potega_out_linia.csv  2D_1m_200Hz_modulo7_30stopni_6n_out_linia.csv  2D_2m_6n_modulo7_200Hz_15stopni_5potega_out_linia.csv
validationTools/database/: clearDatabaseProcedure.db
viewer/: main.js
(+24 files in other folders)
