load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library

cc_binary(
    name = "build.v1.1",
    srcs = [
        "ApplicationBuild/build.v1.1.cpp",
    ],
    deps = [
        ":utils",
    ],
    linkopts=["-lpthread"],
)

cc_library(
    name = "utils",
    srcs = [
        "core/ray.cpp",
        "core/vec3.cpp",
        "core/classUtlilities.cpp",
        "main/sceneManager.cpp",
        "obj/generators.cpp",
        "obj/objects.cpp",
        "main/model.cpp",
        "main/simulator.cpp",
        "main/rayTracer.cpp",
        "main/trackers.cpp",
    ],
    hdrs = [
        "constants.h",
        "core/ray.h",
        "core/vec3.h",
        "main/sceneManager.h",
        "obj/generators.h",
        "obj/objects.h",
        "main/model.h",
        "main/simulator.h",
        "main/rayTracer.h",
        "main/trackers.h",
        "core/classUtlilities.h"
    ],
    deps  = [
        "@github_nlohmann_json//:json",
    ],
)

cc_test(
    name = "sceneManager_test",
    srcs = [
        "tests/sceneManager_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
    size = "medium",
)


cc_test(
    name = "simulator_test",
    srcs = [
        "tests/simulator_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
    size = "medium",
)

cc_test(
    name = "learningObjFile_test",
    srcs = [
        "tests/readingObjFiles_test.cpp",
    ],

    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "object_utils_test",
    srcs = [
        "tests/object_utils_test.cpp",
    ],

    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)


cc_test(
    name = "sphereCollision_test",
    srcs = [
        "tests/sphere_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_test(
    name = "main_test",
    srcs = [
        "tests/main_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_test(
    name = "rayTracer_test",
    srcs = [
        "tests/rayTracer_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ]
)

cc_test(
    name = "generator_test",
    srcs = [
        "tests/generator_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ]
)
