load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library

cc_binary(
    name = "build.v1.1",
    srcs = [
        "ApplicationBuild/build.v1.1.cpp",
    ],
    linkopts = ["-lpthread"],
    deps = [
        ":utils",
    ],
)

cc_binary(
    name = "validation",
    srcs = [
        "ApplicationBuild/build.v1.1.cpp",
    ],
    linkopts = ["-lpthread"],
    deps = [
        ":utils",
    ],
)

cc_library(
    name = "utils",
    srcs = glob([
        "main/*.cpp",
        "core/*.cpp",
        "obj/*.cpp",
    ]),
    hdrs = glob([
        "main/*.h",
        "core/*.h",
        "obj/*.h",
    ]),
    deps = [
        "@github_nlohmann_json//:json",
    ],
)

cc_test(
    name = "sceneManager_test",
    size = "medium",
    srcs = [
        "tests/sceneManager_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "trackers_test",
    size = "medium",
    srcs = [
        "tests/trackers_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "simulator_test",
    size = "medium",
    srcs = [
        "tests/simulator_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "object_utils_test",
    srcs = [
        "tests/object_utils_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "resultsCalculation_test",
    srcs = [
        "tests/resultsCalculation_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "sphereCollision_test",
    srcs = [
        "tests/sphere_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "main_test",
    srcs = [
        "tests/main_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "rayTracer_test",
    srcs = [
        "tests/rayTracer_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "generator_test",
    srcs = [
        "tests/generator_test.cpp",
    ],
    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)
