workspace(name = "D_coefficient_Ray_Tracing")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "github_nlohmann_json",
    sha256 = "69cc88207ce91347ea530b227ff0776db82dcb8de6704e1a3d74f4841bc651cf",
    urls = [
        "https://github.com/nlohmann/json/releases/download/v3.6.1/include.zip",
    ],
    build_file = "//third_party:nlohmann_json.BUILD",
)

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-master",
    url = "https://github.com/google/googletest/archive/master.zip",
)