workspace(name = "D_coefficient_Ray_Tracing")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# compile_commands.json clang
http_archive(
    name = "hedron_compile_commands",

    # Replace the commit hash in both places (below) with the latest, rather than using the stale one here.
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/refs/heads/main.zip",
    strip_prefix = "bazel-compile-commands-extractor-main",
    # When you first run this tool, it'll recommend a sha256 hash to put here with a message like: "DEBUG: Rule 'hedron_compile_commands' indicated that a canonical reproducible form can be obtained by modifying arguments sha256 = ..."
)
load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")
hedron_compile_commands_setup()

http_archive(
    name = "github_nlohmann_json",
    build_file = "//third_party:nlohmann_json.BUILD",
    urls = [
        "https://github.com/nlohmann/json/releases/download/v3.10.4/include.zip",
    ],
)

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-main",
    url = "https://github.com/google/googletest/archive/main.zip",
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_github_nelhage_rules_boost",
    commit = "1e3a69bf2d5cd10c34b74f066054cd335d033d71",
    remote = "https://github.com/nelhage/rules_boost",
    shallow_since = "1591047380 -0700",
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
